add to biography

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<title>Hello world in Git</title>
 	<meta name="description" content="hello world in Git"/>
 </head>
+<ul>
+	<li><a href="bio.html">Biography</a></li>
+</ul>
 <body>
 	<h1>Hello World!</h1>
 </body>
