Change biography and contact link

--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,8 @@
 	<meta name="description" content="hello world in Git"/>
 </head>
 <ul>
-	<li><a href="bio.html">about</a></li>
+	<li><a href="bio.html">biography</a></li>
+        <li><a href="contact.html">Contact</a></li>
 </ul>
 <body>
 	<h1>Hello World!</h1>
