modify link to facebook

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<li><a href="bio.html">Biography</a></li>
         <li><a href="contact2.html">To Email</a></li>
         <li><a href="twitter.html">Twitter</a></li>
-        <li><a href="facebook.html">Facebook</a><li>
+        <li><a href="facebook2.html">Facebook</a><li>
 </ul>
 <body>
 	<h1>Hello World!</h1>
