--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,7 @@
 <ul>
 	<li><a href="bio.html">biography</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="twitter.html">Twitter</a></li>
 </ul>
 <body>
 	<h1>Hello World!</h1>
